# agent-ui-demo

./: ANIMATION_OPTIMIZATION.md  APP_UPDATE.md  ASYMMETRIC_ANIMATION.md  COMPONENT_EXAMPLES.md  NEW_ARCHITECTURE.md  README.md  TECH_STACK_CONFIG.md  TOOL_DETAILS_FEATURE.md  TYPES_AND_UTILS.md  WEB_TOOLS_FEATURE.md  WEB_TOOLS_TEST.md  index.html  package.json  pnpm-lock.yaml  start_backend.bat  start_backend.sh  tailwind.config.js  tsconfig.app.json
.github/: copilot-instructions.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_ai_developer.html  test_code_cleaning.py  test_simple_ai_dev.py  test_stream.html
backend/app/: __init__.py  config.py  config_old.py  main.py
backend/app/agents/: ai_developer copy.py  ai_developer.py  base.py  deepresearch.py
backend/app/api/: chat.py
backend/app/api/routes/: __init__.py  chat.py  health.py
backend/app/core/: exceptions.py  logging.py
backend/app/models/: chat.py  response.py  tool.py
backend/app/services/: chat_service.py  llm_service.py
backend/app/tools/: __init__.py  base.py  code_generator.py  project_structure.py  registry.py  web_content.py  web_search.py
backend/scripts/: start_dev.py  test_ai_dev_tools.py  test_ai_developer_agent.py  test_api.py  test_api_simple.py  test_components.py  test_extreme_parallel.py  test_field_fix.py  test_langsmith_tracing.py  test_llm_connectivity.py  test_parallel_web_content.py  test_simple.py  test_tavily.py  test_tools.py  test_true_parallel.py
docs/: AI_DEVELOPER_AGENT_DESIGN.md  API_INTEGRATION_COMPLETE.md  API_INTEGRATION_GUIDE.md  BACKEND_ARCHITECTURE.md  FIELD_NAME_FIX.md  GENSPARK_API_DESIGN.md  INTEGRATION_SUMMARY.md  TOOL_PANEL_DESIGN.md  genspark-agent-input.json  genspark-agent-resp.json
src/: App.tsx  MonacoEditorDemo.tsx  index.css
src/components/: index.ts
src/contexts/: ThemeContext.tsx  ThemeProvider.tsx  index.ts
src/hooks/: index.ts  useApiStreamingChat.ts  useAutoOpenToolPanel.ts  useMockStreamingChat.ts  useStreamingChat.ts  useTheme.ts
(+53 files in other folders)
